# gitignore-formatter

./: .gitignore  README.md  SECURITY.md  gitignoreformatter.py  pyproject.toml
